<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tvDes"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/s"
            android:textColor="@android:color/holo_red_light"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/first_step"
            android:textColor="@android:color/black"
            android:textSize="23sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/pan_number"
            android:textAllCaps="true"
            android:textColor="#595959"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tvPAN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/btn_pan_card"
            android:padding="12dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/birthdate"
            android:textAllCaps="true"
            android:textColor="#595959"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <EditText
                android:maxLength="2"
                android:id="@+id/etDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_weight="0.7"
                android:background="@drawable/btn_pan_card"
                android:hint="DD"
                android:inputType="number"
                android:padding="12dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

            <EditText
                android:maxLength="2"
                android:id="@+id/etMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_weight="0.7"
                android:background="@drawable/btn_pan_card"
                android:hint="MM"
                android:inputType="number"
                android:padding="12dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

            <EditText
                android:maxLength="4"
                android:id="@+id/etYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_pan_card"
                android:hint="YYYY"
                android:inputType="number"
                android:padding="12dp" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnNext"
        android:layout_marginBottom="5dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/description"
        android:textColorLink="@color/colorPrimary" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvNoPAN"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:text="@string/next"
        android:textColor="@android:color/white" />


    <TextView
        android:id="@+id/tvNoPAN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/i_don_t_have_a_pan_card"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>